Fixed two bugs (user approval list and calendar view for non-admin users). Added DB for the user manager site.

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/ManageUsers.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/ManageUsers.cshtml
@@ -25,6 +25,7 @@
     .no-pad-table {
         margin-left:0;
         margin-right:auto;
+        margin-top:0;
         border-collapse:collapse;
     }
     .no-pad-table td {
@@ -57,7 +58,7 @@
     </tr>
 </table>
 
-<h3>Users awaiting approval: <input type="text" class="counter" id="UANSelect_counter" style="color:yellow"
+<h3>Users awaiting approval: <input type="text" class="counter" id="UNASelect_counter" style="color:yellow"
                                     value="@Model.UsersNotApproved.Count" readonly="readonly"></h3>
 <table class="no-pad-table">
     <tr>
