continued work on group management site, waiting for updates to double list editor

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/EditGroup.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/EditGroup.cshtml
@@ -38,6 +38,8 @@
         Group Members
         @Html.ListEditorFor(m => m.groupMembers, "Group Members", "Approved Users")
         <br />
+
+        <input type="file" />
     </fieldset>
     
     <input type="submit" value="@(Model.ID != -1 ? "Save changes" : "Create Group")"/>
