--- a/CalendarApplication/CalendarApplication/Views/Event/EventSpecificList.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EventSpecificList.cshtml
@@ -3,6 +3,7 @@
 @if(Model.TypeSpecifics.Count > 0)
 {
     <h3>Event Type Specifics:</h3>
+    <script>numberOfFields = @Model.TypeSpecifics.Count;</script>
     <table style="margin-left:0;margin-right:auto">
         @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
         {
